--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
 
   <div id="formContent">
     <!-- Tabs Titles -->
-     <h2 class="active"> Mancomunidad de Tránsito de Tungurahua </h2>
+   <img style="width: 300px; margin-top: 40px;" src="./assets/img/logo2.png" alt="">
     <!-- Icon -->
     <div class="fadeIn first">
       <img src="./assets/img/user.png" id="icon" />
