--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,9 +1,7 @@
 
 <div class="sidebar-wrapper">
-    <div class="logo">
-        <label class="simple-text text-center " style="font-weight: bold;">
-           Mancomunidad de Tránsito de Tungurahua
-        </label>
+    <div class="logo" style="background-color: white !important;">
+        <img style="width: 200px; margin-top: 40px;" src="./assets/img/logo2.png" alt="">
     </div>
     <ul class="nav responsive-nav">
      
