--- a/src/app/consulta/consulta.component.html
+++ b/src/app/consulta/consulta.component.html
@@ -5,7 +5,7 @@
      
       <!-- Icon -->
       <div class="fadeIn first">
-        <img style="width: 300px; margin-top: 40px;" src="./assets/img/logo2.png" alt="">
+        <img class="img-ico"  src="./assets/img/logo2.png" alt="">
       </div>
   
       <!-- Login Form -->
@@ -13,10 +13,11 @@
         <input type="text" id="usuario" formControlName="placa" class="fadeIn second" placeholder="Placa">
         <br>
         <span class="text-danger"
-        *ngIf="placaForm.get('usuario')?.hasError('placa') && placaForm.get('placa')?.touched">
-        El usuario  <strong>es requerido.</strong>
+        *ngIf="placaForm.get('placa')?.touched">
+        La placa  <strong>es requerida.</strong>
         </span>
-        <input  type="submit" [disabled]='placaForm.invalid' class="fadeIn fourth" value="Consultar" > 
+        <br>
+        <input  type="submit" [disabled]='placaForm.invalid' class="fadeIn fourth btn" value="Consultar" > 
       </form>
   
       <!-- Remind Passowrd -->
