--- a/src/app/actas-entrega/actas-entrega.component.html
+++ b/src/app/actas-entrega/actas-entrega.component.html
@@ -289,7 +289,7 @@
                                 </table>
                                 <br />
                                 Para constancia de lo antes indicado firman la
-                                presente acta de partes por diplicado de igual
+                                presente acta de partes por duplicado de igual
                                 tenor.
                                 <br />
                               </div>
